# nbody2024

./: .gitignore  CMakeLists.txt  README.md
include/: main.hpp  particle.hpp
src/: main.cpp  particle.cpp
